--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
     "build": "webpack"
   },
   "devDependencies": {
-    "elm-webpack-loader": "^4.5.0",
+    "elm": "^0.19.0-bugfix2",
+    "elm-format": "^0.8.0",
+    "elm-webpack-loader": "^5.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "webpack": "^4.16.5",
+    "webpack": "^4.17.1",
     "webpack-command": "^0.4.1",
     "webpack-serve": "^2.0.2"
-  }
+  },
+  "dependencies": {}
 }
